# LINSW-webcam

./: .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
overlay/etc/init.d/: S99localcam  S99webcam
overlay/usr/scripts/: run1.sh  run2.sh
overlay/usr/webcam/: __init__.py  camera_utils.py  download_handler.py  fswebcam.py  image_stream_handler.py  internal.py  led.py  run.py
overlay/usr/webcam/js/: ws_streamer.js
tornado_image_streamer/: __init__.py  camera_utils.py  image_stream_handler.py  run.py  tornado_utils.py
tornado_image_streamer/css/: main.css
tornado_image_streamer/js/: ws_streamer.js
tornado_image_streamer/static/: ws_streamer.js
tornado_image_streamer/templates/: index.html
tornado_image_streamer/www/: index.html
