# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

#[versioneer]
#VCS = git
#style = pep440
#versionfile_source = tornado_image_streamer/_version.py
#versionfile_build = tornado_image_streamer/_version.py
#tag_prefix =
#parentdir_prefix = fpcc

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
# See https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name=tornado-image-streamer
# version = 0.1.3
description = Tornado web server image streamer
long-description = file: README.md
long-description-content-type = text/markdown
author = Hans Smit
author_email = jcsmit@xs4all.nl
url = https://gitlab.com/hsmit/tornado-image-streamer
project_urls =
    Source = https://gitlab.com/hsmit/tornado-image-streamer
    Tracker = https://gitlab.com/hsmit/tornado-image-streamer/issues
license = MIT License
keywords = tornado web stream image websocket webcam

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

platforms = unix, linux, osx, win32

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    wheel>=0.29.0
    setuptools>=30.3
install_requires =
    click
    tornado
    pillow
    opencv-python
    numpy

python_requires = >= 3.5

#[options.extras_require]
#extra =
#    extra_pkg

[options.entry_points]
console_scripts =
    tornado_image_streamer = tornado_image_streamer.run:main

[options.packages.find]
exclude =
    contrib
    docs
    tests
    examples
